--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
-.App {
-  text-align: center;
+.mason-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #282c34;
+  color: white;
+}
+.rowContainer{
+  display: flex;
+  align-items: flex-start;
+  height: 300px;
+  width: 1552px;
+  position: absolute;
+  top: 49px;
+  left: 0;
+  padding: 0;
+  gap: 13px;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
